[PAY-1660] Fix layout issues with TrackTile socials row with a lot of stats (#3815)

--- a/packages/web/src/components/track/desktop/TrackTile.module.css
+++ b/packages/web/src/components/track/desktop/TrackTile.module.css
@@ -254,9 +254,15 @@
   margin-right: var(--unit-20);
 }
 
+.small .bottomRight {
+  /* Match socialsRow to keep these in line */
+  height: 18px;
+}
+
 .socialInfo {
   display: inline-flex;
-  width: 100%;
+  flex: 1 1 100%;
+  min-width: 0;
   justify-content: flex-start;
 }
 
